--- a/web/src/pages/document.ejs
+++ b/web/src/pages/document.ejs
@@ -30,8 +30,8 @@ SOFTWARE.
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"
     />
-    <title>Apache APISIX Dashboard</title>
-    <link rel="icon" href="/favicon.png" type="image/x-icon" />
+    <title>NWPUAPI Dashboard</title>
+    <link rel="icon" href="/logo.png" type="image/x-icon" />
   </head>
   <body>
     <noscript>Out-of-the-box mid-stage front/design solution!</noscript>
@@ -208,8 +208,8 @@ SOFTWARE.
           </div>
         </div>
         <div style="display: flex; justify-content: center; align-items: center">
-          <img src="/favicon.png" width="32" style="margin-right: 8px" />
-          Apache APISIX Dashboard
+          <img src="/logo.png" width="32" style="margin-right: 8px" />
+          NWPUAPI Dashboard
         </div>
       </div>
     </div>
